syntax = "proto3";

package auth;

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc SignUp (SignUpRequest) returns (SignUpResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string token_type = 2;
  string expires_in = 3;
}

message SignUpRequest {
  string email = 1;
  string password = 2;
  string password_confirmation = 3;
  string name = 4;
}

message SignUpResponse {
  string token = 1;
}